# global-mq-node.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/infrastructure/: alt_comm_iface.h  inproc_queue.h  node_thread_creation.h  nodecpp_gmqueue_customized_types.h  q_based_infrastructure.h
include/nodecpp/: awaitable.h  basic_collections.h  common.h  common_structs.h  fs.h  nls.h  timers.h
src/: alt_comm_iface.cpp  interthread_comm_impl.h  q_based_infrastructure.cpp  timeout_manager.cpp  timeout_manager.h
test/cplusplus2/basic_test/user_code/: PublisherNode.h  SubscriberNode.h  gmqueue_customized_types.h  html_text_tag_converter.h
test/cplusplus2/basic_test/user_code/idl/: publishable_state.idl  run.bat
test/cpp/basic_test/user_code/: main.cpp
test/cpp/basic_test/user_code/idl/: run.bat
test/cs_plus_cpp/: cs_plus_cpp.sln
test/cs_plus_cpp/cpp_dll/user_code/: SubscriberNode.h  html_text_tag_converter.h  lib_main.cpp
test/cs_plus_cpp/cpp_dll/user_code/idl/: run.bat
test/cs_plus_cpp/csharp/: CppGmqCommIfase.cs  Program.cs  SubscriberNode.cs  csharp.csproj  generated_publishable_state.cs
test/cs_plus_cpp/csharp/Properties/: AssemblyInfo.cs
test/csharp/: csharp.sln
test/csharp/basic_test/: Program.cs  PublisherNode.cs  SubscriberNode.cs  basic_test.csproj  generated_publishable_state.cs  html_text_tag_converter.cs
test/csharp/basic_test/Properties/: AssemblyInfo.cs
test/csharp/basic_test/idl/: publishable_state.idl  run.bat
test/experimental/basic_test/user_code/: PublisherNode.h  SubscriberNode.h  main.cpp
test/experimental/basic_test/user_code/idl/: publishable_state.idl
tools/: ci-clang11.sh  ci-gcc10.sh  ci-vs2019.bat  ci-vs2022.bat
